Implement predict feature